--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
           <div class="flex items-center mb-4">
             <i class="ri-global-line text-3xl mr-4"></i>
-            <h3 class="text-2xl font-semibold">Visit Website</h3>
+            <link href="https://shivayan-enterprises.vercel.app/" class="text-2xl font-semibold">Visit Website</link>
           </div>
           <p class="text-gray-600 dark:text-gray-300">Explore our full range of services and solutions</p>
         </button>
