--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
         </button>
 
         <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
-          <div class="flex items-center mb-4">
+          <a href="https://shivayan-enterprises.vercel.app/contact" class="flex items-center mb-4">
             <i class="ri-customer-service-line text-3xl mr-4"></i>
-            <a href="https://shivayan-enterprises.vercel.app/contact" class="text-2xl font-semibold">Contact Us</a>
-          </div>
+            <a  class="text-2xl font-semibold">Contact Us</a>
+          </a>
           <p class="text-gray-600 dark:text-gray-300">Get in touch with our support team</p>
         </button>
         <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
