--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
         <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
           <div class="flex items-center mb-4">
             <i class="ri-global-line text-3xl mr-4"></i>
-            <a href="https://shivayan-enterprises.vercel.app/" class="text-2xl font-semibold">Visit Website</a>
+            <a href="/" class="text-2xl font-semibold">Visit Website</a>
           </div>
           <p class="text-gray-600 dark:text-gray-300">Explore our full range of services and solutions</p>
         </button>
 
-        <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
-          <a href="https://shivayan-enterprises.vercel.app/contact" class="flex items-center mb-4">
+        <a href="https://shivayan-enterprises.vercel.app/"  class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
+          <div class="flex items-center mb-4">
             <i class="ri-customer-service-line text-3xl mr-4"></i>
-            <a  class="text-2xl font-semibold">Contact Us</a>
-          </a>
+            <a href="https://shivayan-enterprises.vercel.app/contact" class="text-2xl font-semibold">Contact Us</a>
+          </div>
           <p class="text-gray-600 dark:text-gray-300">Get in touch with our support team</p>
-        </button>
+        </a>
         <button class="nav-button p-8 rounded-lg text-left transition-all duration-300 cursor-pointer">
           <div class="flex items-center mb-4">
             <i class="ri-service-line text-3xl mr-4"></i>
